--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "cviebrock/eloquent-sluggable": "*",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
+        "laravel/telescope": "^5.16",
         "laravel/tinker": "^2.10.1",
         "pusher/pusher-php-server": "^7.2"
     },
